# code-executor-hw

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Lambda.Dockerfile  Makefile  README.md  Standalone.Dockerfile  deploy.yaml  service.yaml
k8s/: autoscaler.yaml  deployment.yaml  service.in.yaml
k8s-terraform/: .terraform.lock.hcl  k8s.tf  vpc.tf
lambda-terraform/: gateway.tf  lambda.tf
src/: error.rs  exec.rs  lib.rs  main.rs
terraform/: gke.tf  k8s.tf  terraform.tfvars  vpc.tf
