[package]
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"
name = "code-executor"
version = "0.1.2"

[dependencies]
actix-cors = "0.5.1"
actix-rt = "1.1.1"
actix-web = "3.2.0"
anyhow = "1.0.34"
chrono = "0.4.19"
dotenv = "0.15.0"
envmnt = "0.8.4"
fern = {version = "0.6.0", features = ["colored"]}
log = "0.4.11"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
thiserror = "1.0.22"
